@@ -1,3 +1,11 @@
+2017-11-04  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_content.js:
+	Prevent multiple execution.
+
+	* tryXpath/scripts/try_xpath_functions.js:
+	Prevent multiple execution.
+
 2017-11-03  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/popup/popup.js:
